testsuite/tests/deriving/should_compile/T10561.stderr

T10561.hs:10:52: error:
    • Couldn't match kind ‘k’ with ‘*’
        arising from the first field of ‘Compose’ (type ‘f (g a)’)
      ‘k’ is a rigid type variable bound by
        the deriving clause for ‘Functor (Compose f g)’ at T10561.hs:10:52
    • When deriving the instance for (Functor (Compose f g))
